Fixed text alignment in carousel in Firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -223,17 +223,17 @@ header {
 .carousel-container {
   position: relative;
   width: 100%;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .slides {
   position: relative;
   width: 100%;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .slides img {
@@ -241,10 +241,13 @@ header {
 }
 
   /* Carousel Text */
+
   .carousel-text {
     position: absolute;
-    z-index: 1;
+    /* z-index: 1; */
     text-shadow: 0 0 20px var(--color-one);
+    width: 100%;
+    top: calc(50% - 74px);
   }
 
   .carousel-text h1 {
@@ -262,6 +265,10 @@ header {
     text-align: center;
     color: var(--color-three);
     margin-top: -30px;
+  }
+
+  .hero {
+    top: calc(50% - 100px);
   }
 
   /* Carousel Buttons */
@@ -289,11 +296,13 @@ header {
 
   i.fa-angle-left {
     left: 0;
+    top: calc(50% - 30px);
     margin-left: 20px;
   }
 
   i.fa-angle-right {
     right: 0;
+    top: calc(50% - 30px);
     margin-right: 20px;
   }
 /* Carousel End */
@@ -330,6 +339,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  bottom: 0;
 }
 
 .footer i {
@@ -645,12 +655,20 @@ footer {
     width: 80%;
   }
 
+  .carousel-text {
+    top: calc(50% - 59px);
+  }
+
   .carousel-text h1 {
     font-size: 8em;
   }
 
   .carousel-text h2 {
     font-size: 3.3em;
+  }
+
+  .hero {
+    top: calc(50% - 82px);
   }
 }
 
@@ -661,6 +679,10 @@ footer {
 }
 
 @media (max-width: 700px) { 
+  .carousel-text {
+    top: calc(50% - 44.5px);
+  }
+
   .carousel-text h1 {
     font-size: 6em;
   }
@@ -670,12 +692,24 @@ footer {
     margin-top: -20px;
   }
 
+  .hero {
+    top: calc(50% - 62px);
+  }
+
   .carousel-container i {
     font-size: 4em;
   }
 
   i.fa-pause, i.fa-play {
     font-size: 2em;
+  }
+
+  i.fa-angle-left {
+    top: calc(50% - 20px);
+  }
+
+  i.fa-angle-right {
+    top: calc(50% - 20px);
   }
 
   .menu {
